--- a/fresherbot/index.html
+++ b/fresherbot/index.html
@@ -6,7 +6,7 @@
     <title>FresherBot</title>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="bg-qred-600">
-    Hello
+<body class="bg-red-600">
+    <h1 class="text-white">Hello</h1>
 </body>
 </html>
