few changres are done

--- a/fresherbot/index.html
+++ b/fresherbot/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FresherBot</title>
-    <link rel="stylesheet" href="output.css">
+    <link  href="./css/style.css" rel="stylesheet">
 </head>
-<body class="bg-qred-600">
-    Hello
+<body>
+    <div class="flex flex-row">
+        <h2 class="text-green-500">hello world</h2>
+        <h2>bye</h2>
+    </div>
 </body>
 </html>
