--- a/fresherbot/index.html
+++ b/fresherbot/index.html
@@ -9,5 +9,6 @@
 <body class="bg-red-600">
     <h1 class="text-white">Hello</h1>
     <h2 class="text-black">World</h2>
+    <h3 class="text-green-500">Bye</h3>
 </body>
 </html>
