added footer,Connect with US,Partnered

--- a/fresherbot/index.html
+++ b/fresherbot/index.html
@@ -365,7 +365,7 @@
 
     <!-- footer -->
     <div class="flex w-screen bg-black md:flex-col">
-        <div class="flex flex-col items-center py-12 text-white  lg:flex-row md:items-start lg:justify-between mx-[8%] sm:mx-24"">
+        <div class="flex flex-col items-center py-12 text-white  lg:flex-row md:items-start lg:justify-between mx-[8%] sm:mx-24">
         
             <div class=" justify-center p-10 md:w-[80%]">
             <img src="https://voilacode.github.io/fresherbot-tailwind/assets/logo_fresherbot_dark.png" class="h-10" />
