added footer,Connect with US,Partnered

--- a/fresherbot/index.html
+++ b/fresherbot/index.html
@@ -365,53 +365,54 @@
 
     <!-- footer -->
     <div class="flex w-screen bg-black md:flex-col">
-        <div class="flex flex-col items-center py-12 text-white  lg:flex-row md:items-start lg:justify-between mx-[8%] sm:mx-24">
-        
+        <div
+            class="flex flex-col items-center py-12 text-white  lg:flex-row md:items-start lg:justify-between mx-[8%] sm:mx-24">
+
             <div class=" justify-center p-10 md:w-[80%]">
-            <img src="https://voilacode.github.io/fresherbot-tailwind/assets/logo_fresherbot_dark.png" class="h-10" />
-            <div>2nd Floor, Oyester Uptown, Beside Durgam Cheruvu Metro Station, Madhapur, Hyderabad, Telengana, 500081.
+                <img src="https://voilacode.github.io/fresherbot-tailwind/assets/logo_fresherbot_dark.png"
+                    class="h-10" />
+                <div>2nd Floor, Oyester Uptown, Beside Durgam Cheruvu Metro Station, Madhapur, Hyderabad, Telengana,
+                    500081.
+                </div>
+                <div>+91 89779 45750
+                    +91 90000 45750
+                </div>
             </div>
-            <div>+91 89779 45750
-                +91 90000 45750
+
+            <div class="flex flex-col gap-5 text-center sm:flex-row">
+                <div class="flex flex-col gap-4">
+                    <div class="text-2xl font-semibold">Company</div>
+                    <a class="text-xl font-medium hide" href="">Blog</a>
+                    <a class="text-xl font-medium hide" href="">About Us</a>
+                    <a class="text-xl font-medium hide" href="">Contact Us</a>
+                </div>
+
+                <div class="flex flex-col gap-4 ">
+                    <div class="text-2xl font-semibold">Products</div>
+                    <a class="text-xl font-medium hide" href="">Hiring Assessment</a>
+                    <a class="text-xl font-medium hide" href="">Campus Hiring</a>
+                    <a class="text-xl font-medium hide" href="">Job Posting</a>
+                </div>
+
+                <div class="flex flex-col gap-4 ">
+                    <div class="text-2xl font-semibold">Assessments</div>
+                    <a class="text-xl font-medium hide" href="">Aptitude Test</a>
+                    <a class="text-xl font-medium hide" href="">Technical Test</a>
+                    <a class="text-xl font-medium hide" href="">Coding Test</a>
+                    <a class="text-xl font-medium hide" href="">English Test</a>
+                    <a class="text-xl font-medium hide" href="">Psychometric Test</a>
+                </div>
+
+
+                <div class="flex flex-col gap-4 ">
+                    <div class="text-2xl font-semibold">Interivew Prep</div>
+                    <a class="text-xl font-medium hide" href="">Learning Videos</a>
+                    <a class="text-xl font-medium hide" href="">Practice Questions</a>
+                    <a class="text-xl font-medium hide" href="">Study Material</a>
+                    <a class="text-xl font-medium hide" href="">Skill Tests
+                </div>
             </div>
         </div>
-
-        <div class="flex flex-col gap-5 text-center sm:flex-row">
-            <div class="flex flex-col gap-4">
-                <div class="text-2xl font-semibold">Company</div>
-                <a class="text-xl font-medium hide" href="">Blog</a>
-                <a class="text-xl font-medium hide" href="">About Us</a>
-                <a class="text-xl font-medium hide" href="">Contact Us</a>
-            </div>
-
-            <div class="flex flex-col gap-4 ">
-                <div class="text-2xl font-semibold">Products</div>
-                <a class="text-xl font-medium hide" href="">Hiring Assessment</a>
-                <a class="text-xl font-medium hide" href="">Campus Hiring</a>
-                <a class="text-xl font-medium hide" href="">Job Posting</a>
-            </div>
-
-            <div class="flex flex-col gap-4 ">
-                <div class="text-2xl font-semibold">Assessments</div>
-                <a class="text-xl font-medium hide" href="">Aptitude Test</a>
-                <a class="text-xl font-medium hide" href="">Technical Test</a>
-                <a class="text-xl font-medium hide" href="">Coding Test</a>
-                <a class="text-xl font-medium hide" href="">English Test</a>
-                <a class="text-xl font-medium hide" href="">Psychometric Test</a>
-            </div>
-
-
-            <div class="flex flex-col gap-4 ">
-                <div class="text-2xl font-semibold">Interivew Prep</div>
-                <a class="text-xl font-medium hide" href="">Learning Videos</a>
-                <a class="text-xl font-medium hide" href="">Practice Questions</a>
-                <a class="text-xl font-medium hide" href="">Study Material</a>
-                <a class="text-xl font-medium hide" href="">Skill Tests
-            </div>
-        </div>
-
-    </div>
-    </div>
     </div>
 </body>
 
